--- a/modules/administration/pages/tshoot-corruptrepo.adoc
+++ b/modules/administration/pages/tshoot-corruptrepo.adoc
@@ -29,5 +29,5 @@ With an new repository data file, updates should operate as expected.
 . Regenerate the file from the command line:
 +
 ----
-spacecmd softwarechannel_regenerateyumcache sles{sles-version}-{sp-version}-updates-x86_64
+spacecmd softwarechannel_regenerateyumcache sles{sles-version}-{sp-vert}-updates-x86_64
 ----
