--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -23,32 +23,34 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 == Open File Count Exceeded
 
-``SYMPTOMS``: OSAD clients cannot contact the SUSE Manager Server, and jabberd requires long periods of time to respond on port 5222.
-
-``CAUSE``: The number of maximum files that a jabber user can open is lower than the number of connected clients.
+The number of maximum files that a jabber user can open is lower than the number of connected clients.
+OSAD clients cannot contact the SUSE Manager Server, and jabberd requires long periods of time to respond on port 5222.
 Each client requires one permanently open TCP connection and each connection requires one file handler.
-The result is jabberd begins to queue and refuse connections.
 
-``CURE``: Edit the [path]``/etc/security/limits.conf`` to something similar to the following:
+To resolve OSAD connection problems, edit such lines in [path]``/etc/security/limits.conf``:
+
 ----
 jabber   soft   nofile   <#clients + 100>
 jabber   hard   nofile   <#clients + 1000>
 ----
 
-This will vary according to your setup.
+Itwill vary according to your setup.
 For example, in the case of 5000 clients:
+
 ----
 jabber   soft   nofile   5100
 jabber   hard   nofile   6000
 ----
 
-Ensure you update the [path]``/etc/jabberd/c2s.xml`` `max_fds` parameter as well.
+Ensure you also update the `max_fds` parameter in [path]``/etc/jabberd/c2s.xml``.
 For example: `<max_fds>6000</max_fds>`
 
-``EXPLANATION``: The soft file limit is the limit of the maximum number of open files for a single process.
-In SUSE Manager the highest consuming process is c2s, which opens a connection per client.
+The soft file limit is the limit of the maximum number of open files for a single process.
+In {productname} the highest consuming process is c2s, which opens a connection per client.
 100 additional files are added, here, to accommodate for any non-connection file that c2s requires to work correctly.
 The hard limit applies to all processes belonging to the jabber user, and accounts for open files from the router, s2s and sm processes additionally.
+
+
 
 == jabberd Database Corruption
 
