--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -141,11 +141,30 @@ rcjabberd start
 . Operate the {productname} server and clients so the bug you formerly experienced is reproduced.
 . When you have finished your capture re-open the first terminal and stop the data capture with kbd:[CTRL+c].
 
-
 .Procedure: Client Side Capture
-. Install the tcpdump package on your client as root: [command]``zypper in tcpdump``
-. Stop the OSA process: [command]``rcosad stop``.
-. Begin data capture on port 5222: [command]``tcpdump -s 0 port 5222 -w client_client_dump.pcap``
-. Open a second terminal and start the OSA process: [command]``rcosad start``
-. Operate the SUSE Manager server and clients so the bug you formerly experienced is reproduced.
-. Once you have finished your capture re-open terminal 1 and stop the capture of data with: kbd:[CTRL+c]
+. Install the tcpdump package on your client as root:
++
+
+----
+zypper in tcpdump
+----
+. Stop the OSA process:
++
+
+----
+rcosad stop
+----
+. Begin data capture on port 5222:
++
+
+----
+tcpdump -s 0 port 5222 -w client_client_dump.pcap
+----
+. Open a second terminal and start the OSA process:
++
+
+----
+rcosad start
+----
+. Operate the {productname} server and clients so the bug you formerly experienced is reproduced.
+. When you have finished your capture re-open the first terminal and stop the data capture with kbd:[CTRL+c].
