--- a/modules/administration/pages/tshoot-packages.adoc
+++ b/modules/administration/pages/tshoot-packages.adoc
@@ -30,11 +30,12 @@ When you have located the problematic process, the metadata can be regenerated a
 . On the server, check the [path]``/var/log/rhn/rhn_taskomatic_daemon.log`` file to determine if any processes are still running or a crash occured.
 . Restart taskomatic:
 +
+
 ----
-/etc/init.d/taskomatic restart
+service taskomatic restart
 ----
 +
-. Check package locks and exclude lists to determine if packages are locked or excluded on the client:
+. On the client, Check package locks and exclude lists to determine if packages are locked or excluded:
 +
-* On Expanded Support Platform, check [path]``/etc/yum.conf`` and search for ``exclude=``.
-* On {slsa}, use the [command]``zypper locks`` command.
+* On an Expanded Support Platform, check [path]``/etc/yum.conf`` and search for ``exclude=``.
+* On {sle}, use the [command]``zypper locks`` command.
