Big Scale: add note about swap

--- a/modules/salt/pages/salt-big-scale.adoc
+++ b/modules/salt/pages/salt-big-scale.adoc
@@ -127,6 +127,13 @@ Click menu:Admin[Task Schedules], then the btn:[cobbler-sync-default] link, then
 * the daily run of Gatherer and Subscription Matcher.
 Click menu:Admin[Task Schedules], then the btn:[gatherer-matcher-default] link, then the btn:[Disable Schedule] button and finally btn:[Delete Schedule].
 
+== Swap and Monitoring
+
+It is generally recommended that {productname} Server is constantly monitored and backed up, even more so in case of big scale installations.
+
+In particular, as any swap usage is generally problematic performance-wise, close attention is recommended. Whenever any significant non-transient swap usage is detected, it is recommended to increase the available hardware RAM and evaluate re-tuning the Server to consume less memory (see below).
+
+
 === Tuning
 ==== When is tuning needed?
 
