Big Scale: scheduler note added

--- a/modules/salt/pages/salt-big-scale.adoc
+++ b/modules/salt/pages/salt-big-scale.adoc
@@ -17,7 +17,10 @@ The minimum requirements for the {productname} Server are:
 * 8 recent {x86} cores. Note that only x86-64-based {productname} deployments are currently supported for large installations this stage
 * 32 GiB of RAM. 64 GiB or more for installations with thousands of clients
 * fast I/O storage devices, such as locally-attached SSDs. Locally-attached RAID-0 SSDs for PostgreSQL data directories are recommended
-* if the SUSE Manager Server is virtualized, the `elevator=noop` kernel option should always be set for optimal I/O performance
+* if the SUSE Manager Server is virtualized, the `elevator=noop` kernel commandline option
+** to check the current status, use `cat /sys/block/<DEVICE>/queue/scheduler`. The output is the list of available schedulers with the currently active one in brackets
+ should always be set for optimal I/O performance
+** to change the scheduler before a reboot, use `echo noop > /sys/block/<DEVICE>/queue/scheduler`
 
 {productname} Proxy instances are also required:
 
