--- a/modules/administration/pages/tshoot-packages.adoc
+++ b/modules/administration/pages/tshoot-packages.adoc
@@ -35,7 +35,7 @@ When you have located the problematic process, the metadata can be regenerated a
 service taskomatic restart
 ----
 +
-. On the client, Check package locks and exclude lists to determine if packages are locked or excluded:
+. On the client, check package locks and exclude lists to determine if packages are locked or excluded:
 +
 * On an Expanded Support Platform, check [path]``/etc/yum.conf`` and search for ``exclude=``.
 * On {sle}, use the [command]``zypper locks`` command.
