--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -112,7 +112,7 @@ If you are experiencing bugs regarding OSAD, it can be useful to dump network me
 The following procedures provide information on capturing data from both the client and server side.
 
 .Procedure: Server Side Capture
-. Install the [package]#tcpdump# package on the {productname} server as root:
+. Install the [package]#tcpdump# package on the server as root:
 +
 
 ----
