--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -138,7 +138,7 @@ tcpdump -s 0 port 5222 -w server_dump.pcap
 rcosa-dispatcher start
 rcjabberd start
 ----
-. Operate the {productname} server and clients so the bug you formerly experienced is reproduced.
+. Operate the server and clients so the bug you formerly experienced is reproduced.
 . When you have finished your capture re-open the first terminal and stop the data capture with kbd:[CTRL+c].
 
 .Procedure: Client Side Capture
