--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -166,5 +166,5 @@ tcpdump -s 0 port 5222 -w client_client_dump.pcap
 ----
 rcosad start
 ----
-. Operate the {productname} server and clients so the bug you formerly experienced is reproduced.
+. Operate the server and clients so the bug you formerly experienced is reproduced.
 . When you have finished your capture re-open the first terminal and stop the data capture with kbd:[CTRL+c].
