--- a/modules/administration/pages/tshoot-rpctimeout.adoc
+++ b/modules/administration/pages/tshoot-rpctimeout.adoc
@@ -27,7 +27,7 @@ While this will not resolve networking problems, it will cause a process to fail
 
 .Procedure: Resolving RPC connection timeouts
 
-. On the {productname} server, open the [filename]``/etc/rhn/rhn.conf`` file and set a maximum timeout value (in seconds):
+. On the {productname} Server, open the [filename]``/etc/rhn/rhn.conf`` file and set a maximum timeout value (in seconds):
 +
 ----
 server.timeout =`number`
