--- a/modules/administration/pages/tshoot-rpctimeout.adoc
+++ b/modules/administration/pages/tshoot-rpctimeout.adoc
@@ -32,7 +32,7 @@ While this will not resolve networking problems, it will cause a process to fail
 ----
 server.timeout =`number`
 ----
-. On the {productname} proxy, open the [filename]``/etc/rhn/rhn.conf`` file and set a maximum timeout value (in seconds):
+. On the {productname} Proxy, open the [filename]``/etc/rhn/rhn.conf`` file and set a maximum timeout value (in seconds):
 +
 ----
 proxy.timeout =`number`
