--- a/modules/administration/pages/tshoot-intro.adoc
+++ b/modules/administration/pages/tshoot-intro.adoc
@@ -24,7 +24,7 @@ Using [command]``spacewalk-report``, you can receive reports on:
 . Patches: lists all the patches relevant to the registered systems and sorts patches by severity, as well as the systems that apply to a particular patch.
 . Users: lists all the users registered to {productname} and any systems associated with a particular user.
 
-To get the report in CSV format, run the following at the command line of your {productname} server.
+To get the report in CSV format, run the following at the command line of your {productname} Server.
 
 ----
 spacewalk-report <report_name>
