Updated with link to kbase article.

--- a/modules/salt/pages/salt-formulas.adoc
+++ b/modules/salt/pages/salt-formulas.adoc
@@ -1052,5 +1052,5 @@ This setting gives the highest performance, but compromises your security.
 Do not use this setting where untrusted code might be used.
 
 Manual::
-Which just allows the user to decide
-// More info on this? I can't see any way to select mitigations in the UI. LKB 2018-08-01
+Allows you to control mitigations directly on the client, instead of using the formula.
+For more information about CPU mitigations in the kernel, see https://www.suse.com/support/kb/doc/?id=7023836
