Unit-of-measure suggestions from review
Co-Authored-By: Karl Eichwalder <ke@suse.de>

--- a/modules/salt/pages/large-scale-tuning.adoc
+++ b/modules/salt/pages/large-scale-tuning.adoc
@@ -481,7 +481,7 @@ This section contains information about the available parameters.
                          Setting a lower parameter typically reduces swap usage and results in better performance, especially when RAM memory is abundant.
 | Tune when            | RAM increases, or swap is used when RAM memory is sufficient.
 | Value default        | 60
-| Value recommendation | 1-60. For 128 GB of RAM, 10 is expected to give good results.
+| Value recommendation | 1-60. For 128 GiB of RAM, 10 is expected to give good results.
 | Location             | [path]``/etc/sysctl.conf``
 | After changing       |
 | Notes                |
