--- a/modules/salt/pages/large-scale.adoc
+++ b/modules/salt/pages/large-scale.adoc
@@ -25,7 +25,7 @@ Not all problems can be solved with better hardware, but choosing the right hard
 The minimum requirements for the {productname} Server are:
 
 * Eight or more recent {x86_64} CPU cores.
-* 32{nbsp}GB RAM.
+* 32{nbsp}GiB RAM.
 For installations with thousands of clients, use 64{nbsp}GB or more.
 * Fast I/O storage devices, such as locally-attached SSDs.
 For PostgreSQL data directories, we recommend locally-attached RAID-0 SSDs.
@@ -39,7 +39,7 @@ The minimum requirements for the {productname} Proxy are:
 
 * One {productname} Proxy per 500-1000 clients, depending on available network bandwidth.
 * Two or more recent {x86_64} CPU cores.
-* 16{nbsp}GB RAM, and sufficient storage for caching.
+* 16{nbsp}GiB RAM, and sufficient storage for caching.
 
 Clients should never be directly attached to the {productname} Server in production systems.
 
