--- a/modules/salt/pages/large-scale-tuning.adoc
+++ b/modules/salt/pages/large-scale-tuning.adoc
@@ -73,7 +73,7 @@ Start from the node where significant change has happened.
 
 
 
-== Tuning inputs
+== Tuning Inputs
 
 This section contains information about the available tuning inputs.
 
