Clarify onboarding rate
Key acceptance is just the first step in onboarding, and it's relatively
fast.

--- a/modules/salt/pages/large-scale.adoc
+++ b/modules/salt/pages/large-scale.adoc
@@ -79,7 +79,7 @@ Monitor the server as you scale to identify problems early.
 
 === Salt Client Onboarding Rate
 
-The rate at which {productname} can onboard clients (accept Salt keys) is limited and depends on hardware resources.
+The rate at which {productname} can onboard clients is limited and depends on hardware resources.
 Onboarding clients at a faster rate than {productname} is configured for will build up a backlog of unprocessed keys.
 This slows down the process and can potentially exhaust resources.
 We recommend that you limit the acceptance key rate programmatically.
