Use 'facility' instead of 'tool' to describe the Salt Mine
https://docs.saltstack.com/en/latest/topics/mine/index.html

--- a/modules/salt/pages/large-scale.adoc
+++ b/modules/salt/pages/large-scale.adoc
@@ -117,7 +117,7 @@ Limit the number of non-onboarded clients for optimal performance.
 
 === Disabling the Salt Mine
 
-In older versions, {productname} used a tool called Salt mine to check client availability.
+In older versions, {productname} used a facility called Salt mine to check client availability.
 The Salt mine would cause clients to contact the server every hour, which created significant load.
 With the introduction of a more efficient mechanism in {productname}{nbsp}3.2, the Salt mine is no longer required.
 Instead, the {productname} server uses Taskomatic to ping only the clients that appear to have been offline for twelve hours or more, with all clients being contacted at least once in every twenty four hour period by default.
