--- a/modules/salt/pages/large-scale-tuning.adoc
+++ b/modules/salt/pages/large-scale-tuning.adoc
@@ -117,6 +117,7 @@ This section contains information about the available parameters.
 | Value default        | 150
 | Value recommendation | 150-500
 | Location             | [path]``/etc/apache2/server-tuning.conf``, in the `prefork.c` section
+| Example              | `MaxClients = 200`
 | After changing       | Immediately change `ServerLimit` and check `maxThreads` for possible adjustment.
 | Notes                | This parameter was renamed, both names are valid.
 | More information     | https://httpd.apache.org/docs/2.4/en/mod/mpm_common.html#maxrequestworkers
@@ -134,6 +135,7 @@ This section contains information about the available parameters.
 | Value default        | 150
 | Value recommendation | The same value as `MaxClients`
 | Location             | [path]``/etc/apache2/server-tuning.conf``, in the `prefork.c` section
+| Example              | `ServerLimit = 200`
 | After changing       | Immediately change `ServerLimit` and check `maxThreads` for possible adjustment.
 | More information     | https://httpd.apache.org/docs/2.4/en/mod/mpm_common.html#serverlimit
 |===
@@ -150,6 +152,7 @@ This section contains information about the available parameters.
 | Value default        | 150
 | Value recommendation | The same value as `MaxClients`
 | Location             | [path]``/etc/tomcat/server.xml``
+| Example              | `<Connector port="8009" protocol="AJP/1.3" redirectPort="8443" URIEncoding="UTF-8" address="127.0.0.1" maxThreads="200" connectionTimeout="20000"/>`
 | After changing       |
 | More information     | https://tomcat.apache.org/tomcat-9.0-doc/config/http.html
 |===
@@ -166,8 +169,9 @@ This section contains information about the available parameters.
 | Value default        | 1{nbsp}GiB
 | Value recommendation | 4-8{nbsp}GiB
 | Location             | [path]``/etc/sysconfig/tomcat``
+| Example              | `JAVA_OPTS="... -Xmx8G ..."`
 | After changing       | Check the Memory Usage section in this document
-| Notes                | The value is formatted as `-Xmx<N>G`, where `<N>` is the number of GiB to allocate
+| Notes                |
 | More information     | https://docs.oracle.com/javase/8/docs/technotes/tools/windows/java.html
 |===
 
@@ -185,9 +189,9 @@ This section contains information about the available parameters.
                          For finer settings, use `shared_buffers` + free memory + buffer/cache memory.
                          Free and buffer/cache can be determined via the `free -m` command (`free` and `buff/cache` in the output respectively)
 | Location             | [path]``/var/lib/pgsql/data/postgresql.conf``
+| Example              | `effective_cache_size = 24GB`
 | After changing       | Check the Memory Usage section in this document
 | Notes                | This is an estimation for the query planner, not an allocation.
-                         The value is formatted as `-Xmx<N>G`, where `<N>` is the number of GiB to allocate.
 | More information     | https://www.postgresql.org/docs/10/runtime-config-query.html#GUC-EFFECTIVE-CACHE-SIZE
 |===
 
@@ -202,6 +206,7 @@ This section contains information about the available parameters.
 | Value default        | 5
 | Value recommendation | 50 - 150
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `java.message_queue_thread_pool_size = 50`
 | After changing       | Check `hibernate.c3p0.max_size`, as each thread consumes a PostgreSQL connection, starvation might happen if the allocated connection pool is insufficient.
                          Check `thread_pool`, as each thread might perform Salt API calls, starvation might happen if the allocated Salt thread pool is insufficient.
                          Check Tomcat `-Xmx`, as each thread consumes memory, `OutOfMemoryException` might be raised if insufficient.
@@ -221,6 +226,7 @@ This section contains information about the available parameters.
 | Value default        | 20
 | Value recommendation | 100 to 200, higher than the maximum of `java.message_queue_thread_pool_size + maxThreads` and `org.quartz.threadPool.threadCount`
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `hibernate.c3p0.max_size = 100`
 | After changing       | Check `max_connections` for adjustment.
 | Notes                |
 | More information     | https://www.mchange.com/projects/c3p0/#maxPoolSize
@@ -239,6 +245,7 @@ This section contains information about the available parameters.
 | Value default        |
 | Value recommendation | `2 * hibernate.c3p0.max_size + 50`, if less than 1000
 | Location             | [path]``/var/lib/pgsql/data/postgresql.conf``
+| Example              | `max_connections = 250`
 | After changing       | Check the Memory Usage section in this document.
                          Monitor memory usage closely before and after the change.
 | Notes                |
@@ -256,6 +263,7 @@ This section contains information about the available parameters.
 | Value default        | 200
 | Value recommendation | 200-500
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `java.salt_batch_size = 300`
 | After changing       | Check the Memory Usage section in this document.
                          Monitor memory usage closely before and after the change.
 | Notes                |
@@ -276,6 +284,7 @@ This section contains information about the available parameters.
 | Value default        | 4 seconds
 | Value recommendation | 4-400 seconds
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `java.salt_presence_ping_timeout = 40`
 | After changing       |
 | Notes                |
 | More information     | xref:reference:salt-timeouts.adoc[Salt Timeouts]
@@ -296,6 +305,7 @@ This section contains information about the available parameters.
 | Value default        | 1 second
 | Value recommendation | 1-100 seconds
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `java.salt_presence_ping_gather_job_timeout = 10`
 | After changing       |
 | Notes                |
 | More information     | xref:reference:salt-timeouts.adoc[Salt Timeouts]
@@ -315,6 +325,7 @@ This section contains information about the available parameters.
 | Value default        | 2
 | Value recommendation | 2-10
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `java.taskomatic_channel_repodata_workers = 4`
 | After changing       | Check `taskomatic.java.maxmemory` for adjustment, as every new thread will consume memory
 | Notes                |
 | More information     | `man rhn.conf`
@@ -332,6 +343,7 @@ This section contains information about the available parameters.
 | Value default        | 2048 MiB
 | Value recommendation | 2048-16384 MiB
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `taskomatic.java.maxmemory = 8192`
 | After changing       | Check the Memory Usage section in this document.
 | Notes                |
 | More information     | `man rhn.conf`
@@ -349,6 +361,7 @@ This section contains information about the available parameters.
 | Value default        | 20
 | Value recommendation | 20-200
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `org.quartz.threadPool.threadCount = 100`
 | After changing       | Check `hibernate.c3p0.max_size` and `thread_pool` for adjustment
 | Notes                |
 | More information     | http://www.quartz-scheduler.org/documentation/2.4.0-SNAPSHOT/configuration.html
@@ -366,6 +379,7 @@ This section contains information about the available parameters.
 | Value default        | 5000 ms
 | Value recommendation | 1000-5000 ms
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `org.quartz.scheduler.idleWaitTime = 1000`
 | After changing       |
 | Notes                |
 | More information     | http://www.quartz-scheduler.org/documentation/2.4.0-SNAPSHOT/configuration.html
@@ -382,8 +396,9 @@ This section contains information about the available parameters.
 | Value default        | 1
 | Value recommendation | 1-10
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `taskomatic.com.redhat.rhn.taskomatic.task.MinionActionExecutor.parallel_threads = 10`
 | After changing       |
-| Notes                | Full parameter name is `taskomatic.com.redhat.rhn.taskomatic.task.MinionActionExecutor.parallel_threads`
+| Notes                |
 | More information     |
 |===
 
@@ -398,6 +413,7 @@ This section contains information about the available parameters.
 | Value default        | 512 MiB
 | Value recommendation | 512-4096 MiB
 | Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `rhn-search.java.maxmemory = 4096`
 | After changing       | Check the Memory Usage section in this document.
 | Notes                |
 | More information     |
@@ -414,6 +430,7 @@ This section contains information about the available parameters.
 | Value default        | 25% of total RAM
 | Value recommendation | 25-40% of total RAM
 | Location             | [path]``/var/lib/pgsql/data/postgresql.conf``
+| Example              | `shared_buffers = 8192MB`
 | After changing       | Check the Memory Usage section in this document.
 | Notes                | The value is formatted as `<N>MB`, where `<N>` is the number of MiB to allocate.
 | More information     | https://www.postgresql.org/docs/10/runtime-config-resource.html#GUC-SHARED-BUFFERS
@@ -431,6 +448,7 @@ This section contains information about the available parameters.
 | Value default        |
 | Value recommendation | 2-20 MB
 | Location             | [path]``/var/lib/pgsql/data/postgresql.conf``
+| Example              | `work_mem = 10MB`
 | After changing       | check if the {productname} Server might need additional RAM.
 | Notes                |
 | More information     | https://www.postgresql.org/docs/10/runtime-config-resource.html#GUC-WORK-MEM
@@ -449,6 +467,7 @@ This section contains information about the available parameters.
 | Value default        | 100
 | Value recommendation | 100-500, but should be higher than the sum of `java.message_queue_thread_pool_size` and `org.quartz.threadPool.threadCount`
 | Location             | [path]``/etc/salt/master.d/susemanager.conf``, in the `rest_cherrypy` section.
+| Example              | `thread_pool: 100`
 | After changing       | Check `socket_queue_size` and `worker_threads` for adjustment.
 | Notes                |
 | More information     | https://docs.saltstack.com/en/latest/ref/netapi/all/salt.netapi.rest_cherrypy.html#performance-tuning
@@ -466,6 +485,7 @@ This section contains information about the available parameters.
 | Value default        | 8
 | Value recommendation | 8-200
 | Location             | [path]``/etc/salt/master.d/tuning.conf``
+| Example              | `worker_threads: 50`
 | After changing       | Check the Memory Usage section in this document.
                          Monitor memory usage closely before and after the change.
 | Notes                |
@@ -483,6 +503,7 @@ This section contains information about the available parameters.
 | Value default        | 60
 | Value recommendation | 1-60. For 128 GiB of RAM, 10 is expected to give good results.
 | Location             | [path]``/etc/sysctl.conf``
+| Example              | `vm.swappiness = 20`
 | After changing       |
 | Notes                |
 | More information     | https://www.suse.com/documentation/sles-15/book_sle_tuning/data/cha_tuning_memory_vm.html
