Add missing default

--- a/modules/salt/pages/large-scale-tuning.adoc
+++ b/modules/salt/pages/large-scale-tuning.adoc
@@ -237,7 +237,7 @@ This section contains information about the available parameters.
                          More connections allow for more concurrent threads/workers in various components (in particular Tomcat and Taskomatic), which generally improves performance.
                          However, each connection consumes resources, in particular `work_mem` megabytes per sort operation per connection.
 | Tune when            | `hibernate.c3p0.max_size` changes significantly, as that parameter determines the maximum number of connections available to Tomcat and Taskomatic
-| Value default        |
+| Value default        | 400
 | Value recommendation | `2 * hibernate.c3p0.max_size + 50`, if less than 1000
 | Location             | [path]``/var/lib/pgsql/data/postgresql.conf``
 | Example              | `max_connections = 250`
