Avoid mention the non-scalable version of the command completely

--- a/modules/salt/pages/large-scale.adoc
+++ b/modules/salt/pages/large-scale.adoc
@@ -131,16 +131,10 @@ This is especially effective if you have a large number of clients.
 Disable the Salt mine by running this command on the server:
 
 ----
-salt '*' state.sls util.mgr_mine_config_clean_up
-----
-
-This will restart the clients and generate some Salt events to be processed by the server.
-If you have a large number of clients, handling these events could create excessive load.
-To avoid this, you can execute the command in batch mode:
-
-----
 salt --batch-size 50 '*' state.sls util.mgr_mine_config_clean_up
 ----
+
+Note that this will restart the `salt-minion` service on clients and generate some Salt events to be processed by the server.
 
 You will need to wait for this command to finish executing.
 Do not end the process with kbd:[Ctrl+C].
