--- a/modules/salt/pages/large-scale.adoc
+++ b/modules/salt/pages/large-scale.adoc
@@ -156,7 +156,7 @@ We recommend disabling these jobs:
 
 * Daily comparison of configuration files: [systemitem]``compare-configs-default``
 * Hourly synchronization of Cobbler files: [systemitem]``cobbler-sync-default``
-* Daily gatherer and subscription matcher: [systemitem]``gatherer-matcher-default``],
+* Daily gatherer and subscription matcher: [systemitem]``gatherer-matcher-default``
 
 
 
