Disabling of Taskomatic jobs: add safety note

--- a/modules/salt/pages/large-scale.adoc
+++ b/modules/salt/pages/large-scale.adoc
@@ -158,6 +158,7 @@ We recommend disabling these jobs:
 * Hourly synchronization of Cobbler files: [systemitem]``cobbler-sync-default``
 * Daily gatherer and subscription matcher: [systemitem]``gatherer-matcher-default``
 
+Please do not attempt disabling any other job, as that might prevent the correct functioning of {productname}.
 
 
 === Swap and Monitoring
