--- a/modules/reference/pages/clm/clm-filters.adoc
+++ b/modules/reference/pages/clm/clm-filters.adoc
@@ -6,7 +6,7 @@
 . In the [guimenu]``name`` field, enter a descriptive name for your filter.
 . In the [guimenu]``filter type`` field, choose the entity you want to search.
 . Fill in the additional fields required for the filter (they vary according to the `filter type`).
-. Check the [guimenu]``deny`` checkbox to find results excluding your search term, uncheck it to find results including your search term.
+. In the [guimenu]``rule`` field, choose [guimenu]``Deny`` or [guimenu]``Allow`` depending on the type of the filter you want to create.
 . Click the btn:[Create] button to create your filter and return to the filter list.
 . Navigate to menu:Content Lifecycle Management[Projects].
 . Click btn:[Attach/Detach Filters].
