Align the headline of the Creating a Content Lifecycle Project to other tasks

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -13,7 +13,7 @@ This is achieved through a series of environments that your software channels ca
 Most environment lifecycles include at least test and production environments, but you can have as many environments as you require.
 
 
-.Procedure: Creating a Content Lifecycle Project
+== Create a Content Lifecycle Project
 
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Content Lifecycle Projects], and click btn:[Create Project]
 . In the [guimenu]``Label`` field, enter a label for your project.
