Fix the headline level of 'Assign Systems to Environments' paragraph

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -76,7 +76,7 @@ When the project has been built, the built sources can be sequentially promoted 
 
 
 
-=== Assign Systems to Environments
+== Assign Systems to Environments
 
 When you build and promote content lifecycle projects, it creates a tree of software channels.
 To add systems to the environment, assign the base and child software channels to your system using menu:Software[Software Channels] in the [guimenu]``System Details`` page for the system.
