--- a/modules/salt/pages/salt-formulas.adoc
+++ b/modules/salt/pages/salt-formulas.adoc
@@ -1053,4 +1053,4 @@ Do not use this setting where untrusted code might be used.
 
 Manual::
 Allows you to control mitigations directly on the client, instead of using the formula.
-For more information about CPU mitigations in the kernel, see https://www.suse.com/support/kb/doc/?id=7023836
+For more information about CPU mitigations in the kernel, see https://www.suse.com/documentation/suse-best-practices/singlehtml/SBP-Spectre-Meltdown-L1TF/SBP-Spectre-Meltdown-L1TF.html
