Rewording of tuning introduction

--- a/modules/salt/pages/large-scale-tuning.adoc
+++ b/modules/salt/pages/large-scale-tuning.adoc
@@ -29,16 +29,16 @@ Do not perform these instructions on small or medium scale installations.
 ====
 
 
-== Prepare for Tuning
+== Tuning process
 
-Your {productname} installation has a number of design variables, or constraints, that can be manipulated to adjust performance.
-These design variables are collectively referred to as tuning inputs.
-A complete list of tuning inputs is included in this section.
+Any {productname} installation is normally subject to a number of design and infrastructure constraints that, for the purposes of tuning, we call "environmental variables". Those include the total client count, the number of different Operating Systems under management, the number of software channels and so on - a full list is included under the "Environmental Variables" paragraph below.
 
-Before you begin tuning your installation for the first time, you need to determine which tuning inputs you have available.
-Locate the tuning inputs on the dependency graph to determine how the inputs will interact with each other.
+Those variables influence, either directly or indirectly, the value of most configuration parameters covered by this guide.
 
-Tuning inputs are represented by graph nodes in a rectangle at the top of the dependency graph.
+As a preparation for tuning, try to determine the best possible estimation of each environmental variable.
+
+Secondly, locate the environmental variables on the dependency graph below to determine how they will influence other variables and parameters. Environmental variables are represented by graph nodes in a rectangle at the top of the dependency graph.
+
 Each node is connected with arrows to parameters that might need tuning.
 Consult the relevant sections in this document for more information about recommended values.
 
@@ -73,9 +73,9 @@ Start from the node where significant change has happened.
 
 
 
-== Tuning Inputs
+== Environmental Variables
 
-This section contains information about the available tuning inputs.
+This section contains information about environmental variables (inputs to the tuning process).
 
 Network Bandwidth::
 A measure of the typically available egress bandwith from the {productname} Server host to the clients or {productname} Proxy hosts.
