Line edits to tuning intro

--- a/modules/salt/pages/large-scale-tuning.adoc
+++ b/modules/salt/pages/large-scale-tuning.adoc
@@ -29,21 +29,26 @@ Do not perform these instructions on small or medium scale installations.
 ====
 
 
-== Tuning process
+== The Tuning Process
 
-Any {productname} installation is normally subject to a number of design and infrastructure constraints that, for the purposes of tuning, we call "environmental variables". Those include the total client count, the number of different Operating Systems under management, the number of software channels and so on - a full list is included under the "Environmental Variables" paragraph below.
+Any {productname} installation is subject to a number of design and infrastructure constraints that, for the purposes of tuning, we call environmental variables.
+Environmental variables can include the total number of clients, the number of different operating systems under management, and the number of software channels.
 
-Those variables influence, either directly or indirectly, the value of most configuration parameters covered by this guide.
+Environmental variables influence, either directly or indirectly, the value of most configuration parameters.
+During the tuning process, the configuration parameters are manipulated to improve system performance.
 
-As a preparation for tuning, try to determine the best possible estimation of each environmental variable.
+Before you begin tuning, you will need to estimate the best setting for each environment variable, and adjust the configuration parameters to suit.
 
-Secondly, locate the environmental variables on the dependency graph below to determine how they will influence other variables and parameters. Environmental variables are represented by graph nodes in a rectangle at the top of the dependency graph.
+To help you with the estimation process, we have provided you with a dependency graph.
+Locate the environmental variables on the dependency graph to determine how they will influence other variables and parameters.
 
-Each node is connected with arrows to parameters that might need tuning.
+Environmental variables are represented by graph nodes in a rectangle at the top of the dependency graph.
+Each node is connected to the relevant parameters that might need tuning.
 Consult the relevant sections in this document for more information about recommended values.
 
 Tuning one parameter might require tuning other parameters, or changing hardware, or the infrastructure.
-Follow the arrows going out of each node that represent a parameter that has changed and repeat the process until no more nodes need to be visited.
+When you change a parameter, follow the arrows from that node on the graph to determine what other parameters might need adjustment.
+Continue through each parameter until you have visited all nodes on the graph.
 
 image::parameter_graph.svg[Tuning dependency graph]
 
