--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -530,7 +530,7 @@ In particular, ensure that you have a DHCP server, and have set the [option]``ne
 
 === Enable Bare Metal Systems Management
 
-Bare metal systems management can be enabled or disabled in the {productanme} {webui} by navigating to menu:Admin[SUSE Manager Configuration > Bare-metal systems].
+Bare metal systems management can be enabled or disabled in the {productname} {webui} by navigating to menu:Admin[SUSE Manager Configuration > Bare-metal systems].
 
 [NOTE]
 ====
