--- a/modules/client-configuration/pages/tshoot-clients.adoc
+++ b/modules/client-configuration/pages/tshoot-clients.adoc
@@ -3,7 +3,7 @@
 
 // Keep this in alphabetical order. We might also want to consider breaking these into their own topics, like we have in the admin guide. LKB 2019-04-05
 
-=== Bare Metal Systems
+== Bare Metal Systems
 
 If a bare metal system on the network is not automatically added to the [guilabel]``Systems`` list, check these things first:
 
