--- a/modules/salt/pages/large-scale-tuning.adoc
+++ b/modules/salt/pages/large-scale-tuning.adoc
@@ -110,8 +110,7 @@ Includes `spacecmd`, `spacewalk-clone-by-date`, and similar.
 This section contains information about the available parameters.
 
 
-
-=== `MaxClients` or `MaxRequestWorkers`
+=== `MaxClients`
 
 [cols="1,1"]
 |===
@@ -124,7 +123,7 @@ This section contains information about the available parameters.
 | Location             | [path]``/etc/apache2/server-tuning.conf``, in the `prefork.c` section
 | Example              | `MaxClients = 200`
 | After changing       | Immediately change `ServerLimit` and check `maxThreads` for possible adjustment.
-| Notes                | This parameter was renamed, both names are valid.
+| Notes                | This parameter was renamed to `MacRequestWorkers`, both names are valid.
 | More information     | https://httpd.apache.org/docs/2.4/en/mod/mpm_common.html#maxrequestworkers
 |===
 
